Fix #195 - long dialogs now scroll and are less likely to overflow.

--- a/public/app/ui.css
+++ b/public/app/ui.css
@@ -129,9 +129,10 @@ body {
 
 .modal-dialog {
   color: white;
-  width: 70%;
-  height: 70%;
-  margin: 15%;
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
+  overflow: auto;
+  margin: 50px;
 }
 
 .modal-dialog-line {
